<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    android:background="@color/layout_background">


    <TextView
        android:id="@+id/title_bmi_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/bmi"
        android:textSize="24sp"
        android:layout_marginTop="4sp"
        android:textStyle="bold"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/weight_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/small_gap"
        app:cardCornerRadius="@dimen/card_radius"
        android:backgroundTint="@color/card_background">

        <LinearLayout
            android:id="@+id/layout_weight"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/big_gap"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginEnd="@dimen/big_gap"
                android:text="@string/text_weight_card"/>
            <LinearLayout
                android:id="@+id/layout_weight_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/big_gap"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:textColor="@color/white"
                    android:hint="@string/weight_hint_text"
                    android:textSize="@dimen/extra_text_size"
                    android:textColorHint="@color/text_hint"
                    android:inputType="numberDecimal"
                    />
                <TextView
                    android:id="@+id/kg_text_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kg_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/height_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/medium_small_gap"
        app:cardCornerRadius="@dimen/card_radius"
        android:backgroundTint="@color/card_background">

        <LinearLayout
            android:id="@+id/layout_height"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/big_gap"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginEnd="@dimen/big_gap"
                android:text="@string/text_height_card"/>
            <LinearLayout
                android:id="@+id/layout_height_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/big_gap"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:textColor="@color/white"
                    android:hint="@string/height_hint_text"
                    android:textSize="@dimen/extra_text_size"
                    android:textColorHint="@color/text_hint"
                    android:inputType="numberDecimal"
                    />
                <TextView
                    android:id="@+id/cm_text_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cm_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/action_send_btn"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_gap"
        android:backgroundTint="@color/btn_background"
        android:text="@string/btn_text"
        android:elevation="@dimen/button_elevation"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:textSize="@dimen/send_btn"
        android:textStyle="bold"/>

<androidx.cardview.widget.CardView
    android:id="@+id/bmi_card_view"
    android:layout_width="@dimen/card_width"
    android:layout_height="@dimen/small_card_height"
    app:cardCornerRadius="@dimen/card_radius"
    android:layout_marginTop="@dimen/medium_small_gap"
    app:cardElevation="@dimen/card_elevation"
    app:cardMaxElevation="@dimen/card_elevation"
    android:backgroundTint="@color/card_background"
    app:layout_constraintTop_toBottomOf="@+id/action_calculate" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/bmi_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/extra_text_size"
            android:textColor="@color/white"
            android:text=""
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_gap"
            android:textColor="@color/white"
            android:text=""
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_small_gap"
            android:textColor="@color/white"
            android:text=""
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>


</LinearLayout>